--- a/Practica6_Contacto.html
+++ b/Practica6_Contacto.html
@@ -11,7 +11,7 @@
     <h3>Correo electronico</h3>
     <p>nicolas.felix21@cetis107.edu.mx</p>
     <h3>Ubicación</h3>
-    <img src="mapa.jpg" alt="">
+    <img src="mapa.jpg" alt="" width="200px";>
     <div style="border: 1px solid black; padding: 10px; background-color: cadetblue; text-align: center;">
         <a href="Practica6.html">Regresar al inicio</a>
     </div>
