--- a/Practica6.html
+++ b/Practica6.html
@@ -20,5 +20,7 @@
             <a href="Practica6_Contacto.html">Contacto</a>
         </div>
     </div>
+        <H5> Félix Aguilasocho Nicolás 13/02/23 - &COPY;2023 - nicolas_felix21@gmail.com</H5>
+
 </body>
 </html>
