--- a/Practica6.html
+++ b/Practica6.html
@@ -30,7 +30,7 @@
 </head>
 <body style="background-color: azure;">
     <h1>Navegación en HTML</h1><hr>
-    <h3>Página de inicio</h3>
+    <h3 style="border: 1px solid black; text-align: center;   color: white;" class="menu">Página de inicio</h3>
     <div style="border: 1px solid black;">
         <div style="border-bottom: 1px solid black; padding: 10px;" class="menu">
             <a href="Practica6_Noticias.html">Noticias</a>
