--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
     <div class="lista">
         <a href="https://nicofelixa.github.io/Practica7">Práctica 7</a>
     </div>
+    <div class="lista">
+        <a href="https://nicofelixa.github.io/Practica8">Práctica 8</a>
+    </div>
 </body>
 </html>
