--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <div class="lista">
         <a href="https://nicofelixa.github.io/Practica8">Práctica 8</a>
     </div>
+    <div class="lista">
+        <a href="https://nicofelixa.github.io/Practica9">Práctica 9</a>
+    </div>
 </body>
 </html>
