--- a/index.html
+++ b/index.html
@@ -53,5 +53,14 @@
     <div class="lista">
         <a href="https://nicofelixa.github.io/Practica9">Práctica 9</a>
     </div>
+    <div class="lista">
+        <a href="Practica10.sql">Práctica 10</a>
+    </div>
+    <div class="lista">
+        <a href="usuarios.sql">Práctica 11 Usuarios</a>
+    </div>
+    <div class="lista">
+        <a href="Categorias.sql">Práctica 11 Categorias</a>
+    </div>
 </body>
 </html>
