--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
         }
         .lista:hover{
             background-color: rgb(114, 114, 175);
+            font-size:"30px";
         }
         a{
           color: black;
           text-decoration: none;
           font-weight: bold;
+          text-align: center;
+          font-size:"25px";
         }
     </style>
 </head>
