--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
         <a href="Practica10.sql">Práctica 10</a>
     </div>
     <div class="lista">
-        <a href="usuarios.sql">Práctica 11 Usuarios</a>
-    </div>
-    <div class="lista">
-        <a href="Categorias.sql">Práctica 11 Categorias</a>
+        <a href="usuarios.sql"></a>
+        <a href="Categorias.sql">Práctica 11</a>
     </div>
 </body>
 </html>
