--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <a href="Practica10.sql">Práctica 10</a>
     </div>
     <div class="lista">
-        <a href="usuarios.sql"></a>
-        <a href="Categorias.sql">Práctica 11</a>
+        <a href="usuarios.sql">Práctica</a>
+        <a href="Categorias.sql" 11</a>
     </div>
 </body>
 </html>
