--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="lista">
         <a href="usuarios.sql">Práctica</a>
-        <a href="Categorias.sql" 11</a>
+        <a href="Categorias.sql"> 11</a>
     </div>
 </body>
 </html>
