--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             background-color: rgb(203, 186, 243);
             padding: 15px;
             text-align: center;
-            font-size:"25px";
+            font-size: larger;
 
         }
         .lista:hover{
             background-color: rgb(114, 114, 175);
-            
+            font-size:x-large;
         }
         a{
           color: black;
           text-decoration: none;
           font-weight: bold;
-          font-size:"30px";
+          
         }
     </style>
 </head>
