--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             background-color: rgb(203, 186, 243);
             padding: 15px;
             text-align: center;
-            font-size: larger;
+            font-size: large;
+            transition-duration:1s;
 
         }
         .lista:hover{
