--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
         <a href="usuarios.sql">Práctica</a>
         <a href="Categorias.sql"> 11</a>
     </div>
+     <div class="lista">
+        <a href="https://nicofelixa.github.io/Practica12">Práctica 12</a>
+    </div>
 </body>
 </html>
