--- a/evaluacion1.html
+++ b/evaluacion1.html
@@ -128,7 +128,7 @@
           padding: 20px;
           background-color: #25273a; 
           color: #f2f2f2; 
-          height: 800px;
+          height: 1000px;
         }
         .col-md-6{
           margin-top: 30px;
@@ -288,22 +288,25 @@
                 <h4>Te ayudaremos a conseguir la casa de tus sueños!</h4>
                 <p>Recibe noticias y actualizaciones sobre nuestros productos y servicios directamente en tu correo electrónico.</p>
                 <form>
-                  <div class="form-group">
-                    <label for="email">Correo electrónico:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico"><br>
-                    <label for="fecha_nacimiento">Fecha de nacimiento</label><br>
-                    <input type="date" required> <br><br>
-                    <label for="sexo">Sexo</label><br>
-                    <input type="radio" name="sexo" required>Masculino
-                    <input type="radio" name="sexo" required>Femenino <br><br>
+                  <div class="form-group"> 
+                    <b><label for="email">Correo electrónico:</label> <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico"><br> </b></td>
+                    <b><label for="fecha_nacimiento">Fecha de nacimiento</label><br>
+                      <input type="date" required> <br><br></b>
+                    <b><label for="sexo">Sexo</label><br>
+                      <input type="radio" name="sexo" required>Masculino
+                      <input type="radio" name="sexo" required>Femenino <br><br></b>
+                
+             
                     <label for="tarjeta">Tarjeta</label>
-                    <select name="Tarjeta" id="">
-                        <option value="Selecciona una tarjeta">Selecciona una tarjeta</option>
-                        <option value="BBVA">BBVA</option>
-                        <option value="Bancomer">Bancomer</option>
-                        <option value="Santander">Santander</option>
-                    </select><br><br>
-                  </div>
+                      <select name="Tarjeta" id="">
+                          <option value="Selecciona una tarjeta">Selecciona una tarjeta</option>
+                          <option value="BBVA">BBVA</option>
+                          <option value="Bancomer">Bancomer</option>
+                          <option value="Santander">Santander</option>
+                      </select><br><br>
+                  <label for="presupuesto">Presupuesto</label> <br><input type="number"> <br><br>
+                    <label for="name">Nombre completo</label>   <br>  <input type="text" placeholder="Teclea nombre"required> 
+                  </div>  
                   <button type="submit" class="btn btn-outline-light" style="position: relative; height: 30%; transform: translate(0%,30%); margin-bottom: 20px;">Enviar</button>
                 </form>
               </div>
@@ -313,7 +316,6 @@
                   <li><i class="fa fa-map-marker"></i> Dirección: 123 Calle Principal, Ciudad, País</li>
                   <li><i class="fa fa-phone"></i> Teléfono: +1234567890</li>
                   <li><i class="fa fa-envelope"></i> Correo electrónico: info@logra.com</li>
-                </ul>
               </div>
             </div>
             </div>
