--- a/evaluacion1.html
+++ b/evaluacion1.html
@@ -154,7 +154,7 @@
           margin-top: 30px;
         }
     @media(max-width:600px){
-            header, footer, .article{
+            header, footer, .article, #banner:before{
                 width: 100%;
                 height: auto;
             }
