--- a/evaluacion1.html
+++ b/evaluacion1.html
@@ -162,6 +162,10 @@
               height: 200px;
               width: 100%;
             }
+            .lg-layout{
+              width:55%;
+                heigth: auto;
+            }
           }
   </style>
 </head>
