--- a/evaluacion1.html
+++ b/evaluacion1.html
@@ -163,8 +163,8 @@
               width: 100%;
             }
             .lg-layout{
-              width:55%;
-                heigth: auto;
+              width: 55%;
+              height: auto;
             }
           }
   </style>
