Felix Aguilasocho y Lopez Chavira

--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -346,6 +346,7 @@
                   <li><i class="fa fa-envelope"></i> Correo electrónico: info@logra.com</li>
               </div>
             </div>
+            <h5>Felix Aguilasocho Nicolas <br>Lopez Chavira Brunette sofia <br> Evaluacion 1 @copy;</h5>
             </div>
           
         </footer>
