Felix Aguilasocho Y Lopez Chavira

--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -179,7 +179,7 @@
         <i class="flaticon-phone">123 456 7890</a></i>
       </span>
       <address>
-        <i class="flaticon-pin">Dirección: 123 Calle Principal, Ciudad, País</i>
+        <i class="flaticon-pin">Felix Aguilasocho Nicolas y Lopez Chavira Brunette Sofia/i>
      
       </address>
     </span>
