--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -26,7 +26,9 @@
       font-size: x-large;
 
     }
-
+    h5{
+      text-align: center;
+    }
     #banner {
       padding: 0 50px;
       background-image: url(ImagenesLogra/Banner.jpeg);
