--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="https://nicofelixa.github.io/Evaluacion1/evaluacion1">Evaluacion 1 Pagina</a>
     </div>
     <div class="lista">
-        <a href="Evaluacion1/evaluacion.sql.sql">Evaluacion 1 Base de datos</a>
+        <a href="Evaluacion1/Evaluacion.sql">Evaluacion 1 Base de datos</a>
     </div>
 </body>
 </html>
