--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -197,7 +197,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li>
-                <img src="Logra.jpg" alt="" class="logo" >
+                <img src="logra.jpg" alt="" class="logo" >
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#Casas">Casas</a>
