Felix Aguilasocho Y Lopez Chavira

--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -190,7 +190,7 @@
   </div>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-          <h1 class="navbar-brand" href="#">LOGRA <br> Bienes Y Raices</h1>
+          <h1 class="navbar-brand" href="nicofelixa.github.io/Evaluacion1/evaluacion1">LOGRA <br> Bienes Y Raices</h1>
           <button class="navbar-toggler" stype="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -306,7 +306,7 @@
       <article class="article">
           <h2>CONTACTA CON NOSOTROS PARA EL MEJOR ASESORAMIENTO</h2> <hr>
           <p>Te ayudamos a encontrar el inmueble adecuado a tus nececidades. <br><br>
-            <button class="btn btn-outline-light">Ver propiedades</button>
+            <button class="btn btn-outline-light"><a href="#Casas">Ver propiedades</a></button>
           </p>
       </article>
   </section>
