Felix Aguilasocho y Lopez Chavira

--- a/Evaluacion1/evaluacion1.html
+++ b/Evaluacion1/evaluacion1.html
@@ -205,10 +205,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="https://goo.gl/maps/u3yW8SZPRzDKUWDd7">Ubicaciones</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Mas opciones
-                </a>
+             <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
+              </li>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="tel: +526674518294">Contactar</a></li>
                   <li><a class="dropdown-item" href="#contacto">Dudas</a></li>
