--- a/parcial3/practica5.html
+++ b/parcial3/practica5.html
@@ -31,19 +31,19 @@
         <div style="width: 20%;">
             <table>
                 <tr>
-                    <td><input type="text" name="cuadro[]" value="O" required></td>
-                    <td><input type="text" name="cuadro[]" value="X" required></td>
-                    <td><input type="text" name="cuadro[]" value="O" required></td>
+                    <td><input type="text" name="cuadro[]" value="" ></td>
+                    <td><input type="text" name="cuadro[]" value="" ></td>
+                    <td><input type="text" name="cuadro[]" value="" ></td>
                 </tr>
                 <tr>    
-                    <td><input type="text" name="cuadro[]"value="X" required></td>
-                    <td><input type="text" name="cuadro[]"value="X" required></td>
-                    <td><input type="text" name="cuadro[]"value="O" required></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
                 </tr>
                 <tr>
-                    <td><input type="text" name="cuadro[]"value="O" required></td>
-                    <td><input type="text" name="cuadro[]"value="X" required></td>
-                    <td><input type="text" name="cuadro[]"value="X" required></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
+                    <td><input type="text" name="cuadro[]"value="" ></td>
                 </tr>
             </table><br>    
             <input type="submit" value="Enviar Jugada" class="btn">       
