--- a/parcial3/practica6.html
+++ b/parcial3/practica6.html
@@ -4,34 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego del ahorcado</title>
+    <title>Configurar juego ahorcado</title>
     <link rel="stylesheet" href="bootstrap.css">
+    <style>
+        body {
+            background-color: #f2f2f2;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+        }
+        .btn-primary {
+            display: block;
+            width: 100%;
+            color: black;
+            
+            background-color: rgb(122, 178, 255);
+        }
+    </style>
 </head>
 <body>
+    <h1>Configurar Juego:</h1>
     <div class="container">
         <div class="row">
-            <h1>Ahorcado</h1> <hr>
             <form action="practica6.php" method="POST">
                 <div class="form-group">
-                    <label for="">Nombre del jugador:</label>
-                    <input type="text" name="jugador" class="form-control" required>
+                    <label for="">Nombre del jugador</label>
+                    <input type="text" required name="jugador" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="">
-                        <label for="">Palabra:</label>
-                        <input type="text" name="palabra" class="form-control" required>
-                    </label>
+                    <label for="">Palabra:</label>
+                    <input type="text" required name="palabra" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="">No. de Vidas</label>
-                    <input type="number" name="vidas" class="form-control" required>
-                </div> <br>
+                    <label for="">Num. vidas:</label>
+                    <input type="text" required name="vidas" class="form-control">
+                </div>
                 <div>
-                    <input type="submit" class="btn btn-primary">
+                    <input type="submit" value="Iniciar Juego" class="btn btn-primary" >
                 </div>
             </form>
         </div>
     </div>
-
 </body>
 </html>
